--- a/discoverydino/package.json
+++ b/discoverydino/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.24",
     "lucide-react": "^0.364.0",
+    "mongodb": "^6.5.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
